--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+
 language:
   - cpp
 
@@ -8,7 +9,7 @@ addons:
   sonarcloud:
     organization: "galminas-github"
     token:
-secure: $SONAR_TOKEN
+      secure: $SONAR_TOKEN
 
 script:
   - qmake
@@ -17,6 +18,12 @@ script:
 
 after_success:
   - coveralls --root . -E ".*external.*" -E ".*tests.*"
+  - build-wrapper-linux-x86-64 --out-dir bw-output make clean all
+  - sonar-scanner
+
+cache:
+  directories:
+    - '$HOME/.sonar/cache'
 
 notifications:
-  email: false
+email: false
